[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/forest/demo-transition-areas/demo-area-1/forest_demo_transition_p1.gd" type="Script" id=1]
[ext_resource path="res://scenes/forest/assets/forest_tiles.tres" type="TileSet" id=2]
[ext_resource path="res://entities/temp_folder_harmful_block/HarmfulBlock.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/forest/demo-transition-areas/DetectionArea2D.tscn" type="PackedScene" id=4]

[node name="ForestDemoOne" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap_background" type="TileMap" parent="."]
scale = Vector2( 1.5, 1.5 )
tile_set = ExtResource( 2 )
format = 1

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 1.5, 1.5 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -983022, 4, 0, -983021, 2, 0, -983020, 2, 0, -983019, 2, 0, -983018, 2, 0, -983017, 2, 0, -983016, 2, 0, -983015, 3, 0, -917487, 4, 0, -917486, 0, 0, -917485, 0, 0, -917484, 0, 0, -917483, 0, 0, -917482, 0, 0, -917481, 0, 0, -917480, 0, 0, -917479, 0, 0, -917478, 3, 0, -851952, 19, 0, -851951, 0, 0, -851950, 0, 0, -851949, 0, 0, -851948, 0, 0, -851947, 0, 0, -851946, 0, 0, -851945, 0, 0, -851944, 0, 0, -851943, 0, 0, -851942, 0, 0, -851941, 3, 0, -786417, 19, 0, -786416, 0, 0, -786415, 0, 0, -786414, 0, 0, -786413, 0, 0, -786412, 0, 0, -786411, 0, 0, -786410, 0, 0, -786409, 0, 0, -786408, 0, 0, -786407, 0, 0, -786406, 0, 0, -786405, 0, 0, -786404, 3, 0, -720882, 19, 0, -720881, 0, 0, -720880, 0, 0, -720879, 0, 0, -720878, 25, 0, -720877, 25, 0, -720876, 25, 0, -720875, 25, 0, -720874, 25, 0, -720873, 25, 0, -720872, 25, 0, -720871, 25, 0, -720870, 25, 0, -720869, 0, 0, -720868, 0, 0, -720867, 3, 0, -655347, 19, 0, -655346, 0, 0, -655345, 0, 0, -655344, 0, 0, -655343, 25, 0, -655342, 25, 0, -655341, 25, 0, -655340, 25, 0, -655339, 25, 0, -655338, 25, 0, -655337, 25, 0, -655336, 25, 0, -655335, 25, 0, -655334, 25, 0, -655333, 25, 0, -655332, 0, 0, -655331, 0, 0, -655330, 3, 0, -589812, 19, 0, -589811, 0, 0, -589810, 0, 0, -589809, 0, 0, -589808, 25, 0, -589807, 25, 0, -589806, 25, 0, -589805, 25, 0, -589800, 25, 0, -589799, 25, 0, -589798, 25, 0, -589797, 25, 0, -589796, 25, 0, -589795, 0, 0, -589794, 0, 0, -589793, 3, 0, -524277, 19, 0, -524276, 0, 0, -524275, 0, 0, -524274, 0, 0, -524273, 25, 0, -524272, 25, 0, -524271, 25, 0, -524262, 25, 0, -524261, 25, 0, -524260, 25, 0, -524259, 25, 0, -524258, 0, 0, -524257, 0, 0, -524256, 3, 0, -393227, 10, 0, -393226, 10, 0, -393225, 10, 0, -393224, 10, 0, -393223, 10, 0, -393222, 10, 0, -393221, 10, 0, -393220, 10, 0, -393219, 10, 0, -393218, 10, 0, -393217, 10, 0, -458752, 10, 0, -458751, 10, 0, -458750, 10, 0, -458749, 10, 0, -458748, 10, 0, -458747, 10, 0, -458746, 10, 0, -458745, 10, 0, -458744, 10, 0, -458743, 10, 0, -458742, 10, 0, -458741, 0, 0, -458740, 25, 0, -458739, 25, 0, -458738, 25, 0, -458737, 25, 0, -458736, 25, 0, -458725, 25, 0, -458724, 25, 0, -458723, 25, 0, -458722, 25, 0, -458721, 0, 0, -458720, 0, 0, -458719, 3, 0, -327691, 25, 0, -327690, 25, 0, -327689, 25, 0, -327688, 25, 0, -327687, 25, 0, -327686, 25, 0, -327685, 25, 0, -327684, 25, 0, -327683, 25, 0, -327682, 25, 0, -327681, 25, 0, -393216, 25, 0, -393215, 25, 0, -393214, 25, 0, -393213, 25, 0, -393212, 25, 0, -393211, 25, 0, -393210, 25, 0, -393209, 25, 0, -393208, 25, 0, -393207, 25, 0, -393206, 25, 0, -393205, 25, 0, -393204, 25, 0, -393203, 25, 0, -393202, 25, 0, -393189, 25, 0, -393188, 25, 0, -393187, 25, 0, -393186, 25, 0, -393185, 25, 0, -393184, 0, 0, -393183, 0, 0, -393182, 3, 0, -262155, 25, 0, -327650, 25, 0, -327649, 25, 0, -327648, 25, 0, -327647, 0, 0, -327646, 0, 0, -327645, 3, 0, -196619, 25, 0, -262126, 24, 0, -262125, 22, 0, -262124, 22, 0, -262123, 22, 0, -262122, 22, 0, -262121, 22, 0, -262120, 23, 0, -262112, 25, 0, -262111, 25, 0, -262110, 25, 0, -262109, 25, 0, -262108, 25, 0, -262107, 25, 0, -262106, 25, 0, -262105, 25, 0, -262104, 25, 0, -262103, 25, 0, -262102, 25, 0, -262101, 25, 0, -262100, 25, 0, -262099, 25, 0, -262098, 25, 0, -262097, 25, 0, -262096, 25, 0, -131083, 25, 0, -196575, 25, 0, -196574, 25, 0, -196573, 25, 0, -196572, 25, 0, -196571, 25, 0, -196570, 25, 0, -196569, 25, 0, -196568, 25, 0, -196567, 25, 0, -196566, 25, 0, -196565, 25, 0, -196564, 25, 0, -196563, 25, 0, -196562, 25, 0, -196561, 25, 0, -196560, 25, 0, -65547, 25, 0, -131031, 13, 0, -11, 25, 0, -65517, 26, 0, -65516, 26, 0, -65515, 26, 0, -65514, 26, 0, -65513, 26, 0, -65512, 26, 0, -65511, 26, 0, -65510, 26, 0, -65509, 26, 0, -65508, 26, 0, 65525, 25, 0, 10, 19, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 20, 2, 0, 21, 2, 0, 22, 2, 0, 23, 2, 0, 24, 2, 0, 25, 2, 0, 26, 2, 0, 27, 2, 0, 28, 2, 0, 29, 2, 0, 30, 2, 0, 31, 20, 0, 131061, 25, 0, 131064, 4, 0, 131065, 2, 0, 131066, 2, 0, 131067, 2, 0, 131068, 2, 0, 131069, 3, 0, 65545, 19, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 65568, 20, 0, 196597, 25, 0, 196600, 8, 0, 196601, 7, 0, 196602, 7, 0, 196603, 7, 0, 196604, 7, 0, 196605, 9, 0, 131076, 24, 0, 131077, 22, 0, 131078, 22, 0, 131079, 22, 0, 131080, 22, 0, 131081, 18, 0, 131082, 18, 0, 131083, 18, 0, 131084, 18, 0, 131085, 18, 0, 131086, 18, 0, 131087, 18, 0, 131088, 18, 0, 131089, 18, 0, 131090, 18, 0, 131091, 18, 0, 131092, 18, 0, 131093, 18, 0, 131094, 18, 0, 131095, 18, 0, 131096, 18, 0, 131097, 18, 0, 131098, 18, 0, 131099, 18, 0, 131100, 18, 0, 131101, 18, 0, 131102, 18, 0, 131103, 18, 0, 131104, 18, 0, 131105, 18, 0, 131106, 18, 0, 131107, 18, 0, 131108, 18, 0, 131109, 18, 0, 131110, 18, 0, 131111, 18, 0, 131112, 18, 0, 131113, 18, 0, 131114, 18, 0, 131115, 18, 0, 131116, 18, 0, 131117, 18, 0, 131118, 18, 0, 131119, 18, 0, 131120, 18, 0, 262133, 25, 0, 327669, 25, 0, 393205, 18, 0, 393206, 18, 0, 393207, 18, 0, 393208, 18, 0, 393209, 18, 0, 393210, 18, 0, 393211, 18, 0, 393212, 18, 0, 393213, 18, 0, 393214, 18, 0, 393215, 18, 0, 327680, 18, 0, 327681, 21, 0, 327682, 21, 0, 327683, 18, 0, 327684, 18, 0, 327685, 21, 0, 327686, 18, 0, 327687, 18, 0, 327688, 18, 0, 327689, 18, 0, 327690, 18, 0, 327691, 18, 0, 327692, 18, 0, 327693, 18, 0, 327694, 18, 0, 327695, 18, 0, 327696, 18, 0, 327697, 18, 0, 327698, 18, 0, 327699, 18, 0, 327700, 18, 0, 327701, 18, 0, 327702, 18, 0, 327703, 21, 0, 327704, 21, 0, 327705, 18, 0, 327706, 18, 0, 327707, 21, 0, 327708, 18, 0, 327709, 18, 0, 327710, 18, 0, 327711, 18, 0, 327712, 18, 0, 327713, 18, 0, 327714, 18, 0, 327715, 18, 0, 327716, 18, 0, 327717, 18, 0, 327718, 18, 0, 327719, 18, 0, 327720, 18, 0, 327721, 18, 0, 327722, 18, 0, 327723, 18, 0, 327724, 18, 0, 327725, 18, 0, 327726, 18, 0, 327727, 18, 0, 327728, 18, 0, 458741, 18, 0, 458742, 18, 0, 458743, 18, 0, 458744, 18, 0, 458745, 18, 0, 458746, 18, 0, 458747, 18, 0, 458748, 21, 0, 458749, 21, 0, 458750, 18, 0, 458751, 18, 0, 393216, 21, 0, 393217, 18, 0, 393218, 18, 0, 393219, 18, 0, 393220, 18, 0, 393221, 18, 0, 393222, 18, 0, 393223, 18, 0, 393224, 18, 0, 393225, 18, 0, 393226, 18, 0, 393227, 18, 0, 393228, 18, 0, 393229, 18, 0, 393230, 18, 0, 393231, 18, 0, 393232, 18, 0, 393233, 18, 0, 393234, 21, 0, 393235, 21, 0, 393236, 18, 0, 393237, 18, 0, 393238, 21, 0, 393239, 18, 0, 393240, 18, 0, 393241, 18, 0, 393242, 18, 0, 393243, 18, 0, 393244, 18, 0, 393245, 18, 0, 393246, 18, 0, 393247, 18, 0, 393248, 18, 0, 393249, 18, 0, 393250, 18, 0, 393251, 18, 0, 393252, 18, 0, 393253, 18, 0, 393254, 18, 0, 393255, 18, 0, 393256, 18, 0, 393257, 18, 0, 393258, 18, 0, 393259, 18, 0, 393260, 18, 0, 393261, 18, 0, 393262, 18, 0, 393263, 18, 0, 393264, 18, 0, 524277, 18, 0, 524278, 18, 0, 524279, 18, 0, 524280, 18, 0, 524281, 18, 0, 524282, 18, 0, 524283, 18, 0, 524284, 18, 0, 524285, 18, 0, 524286, 18, 0, 524287, 18, 0, 458752, 18, 0, 458753, 21, 0, 458754, 21, 0, 458755, 18, 0, 458756, 18, 0, 458757, 21, 0, 458758, 18, 0, 458759, 18, 0, 458760, 18, 0, 458761, 18, 0, 458762, 18, 0, 458763, 18, 0, 458764, 18, 0, 458765, 18, 0, 458766, 18, 0, 458767, 18, 0, 458768, 18, 0, 458769, 18, 0, 458770, 18, 0, 458771, 18, 0, 458772, 18, 0, 458773, 18, 0, 458774, 18, 0, 458775, 21, 0, 458776, 21, 0, 458777, 18, 0, 458778, 18, 0, 458779, 21, 0, 458780, 18, 0, 458781, 18, 0, 458782, 18, 0, 458783, 18, 0, 458784, 18, 0, 458785, 18, 0, 458786, 18, 0, 458787, 18, 0, 458788, 18, 0, 458789, 18, 0, 458790, 18, 0, 458791, 18, 0, 458792, 18, 0, 458793, 18, 0, 458794, 18, 0, 458795, 18, 0, 458796, 18, 0, 458797, 18, 0, 458798, 18, 0, 458799, 18, 0, 458800, 18, 0, 589813, 18, 0, 589814, 18, 0, 589815, 18, 0, 589816, 18, 0, 589817, 18, 0, 589818, 18, 0, 589819, 18, 0, 589820, 21, 0, 589821, 21, 0, 589822, 18, 0, 589823, 18, 0, 524288, 21, 0, 524289, 18, 0, 524290, 18, 0, 524291, 18, 0, 524292, 18, 0, 524293, 18, 0, 524294, 18, 0, 524295, 18, 0, 524296, 18, 0, 524297, 18, 0, 524298, 18, 0, 524299, 18, 0, 524300, 18, 0, 524301, 18, 0, 524302, 18, 0, 524303, 18, 0, 524304, 18, 0, 524305, 18, 0, 524306, 21, 0, 524307, 18, 0, 524308, 18, 0, 524309, 18, 0, 524310, 18, 0, 524311, 18, 0, 524312, 18, 0, 524313, 18, 0, 524314, 18, 0, 524315, 18, 0, 524316, 18, 0, 524317, 18, 0, 524318, 18, 0, 524319, 18, 0, 524320, 18, 0, 524321, 18, 0, 524322, 18, 0, 524323, 18, 0, 524324, 18, 0, 524325, 18, 0, 524326, 18, 0, 524327, 18, 0, 524328, 18, 0, 524329, 18, 0, 524330, 18, 0, 524331, 18, 0, 524332, 18, 0, 524333, 18, 0, 524334, 18, 0, 524335, 18, 0, 524336, 18, 0, 655349, 18, 0, 655350, 18, 0, 655351, 18, 0, 655352, 18, 0, 655353, 18, 0, 655354, 18, 0, 655355, 18, 0, 655356, 18, 0, 655357, 18, 0, 655358, 18, 0, 655359, 18, 0, 589824, 18, 0, 589825, 21, 0, 589826, 21, 0, 589827, 18, 0, 589828, 18, 0, 589829, 21, 0, 589830, 18, 0, 589831, 18, 0, 589832, 18, 0, 589833, 18, 0, 589834, 18, 0, 589835, 18, 0, 589836, 18, 0, 589837, 18, 0, 589838, 18, 0, 589839, 18, 0, 589840, 18, 0, 589841, 18, 0, 589842, 18, 0, 589843, 18, 0, 589844, 18, 0, 589845, 18, 0, 589846, 18, 0, 589847, 18, 0, 589848, 18, 0, 589849, 18, 0, 589850, 18, 0, 589851, 18, 0, 589852, 18, 0, 589853, 18, 0, 589854, 18, 0, 589855, 18, 0, 589856, 18, 0, 589857, 18, 0, 589858, 18, 0, 589859, 18, 0, 589860, 18, 0, 589861, 18, 0, 589862, 18, 0, 589863, 18, 0, 589864, 18, 0, 589865, 18, 0, 589866, 18, 0, 589867, 18, 0, 589868, 18, 0, 589869, 18, 0, 589870, 18, 0, 589871, 18, 0, 589872, 18, 0, 720885, 18, 0, 720886, 18, 0, 720887, 18, 0, 720888, 18, 0, 720889, 18, 0, 720890, 18, 0, 720891, 18, 0, 720892, 21, 0, 720893, 21, 0, 720894, 18, 0, 720895, 18, 0, 655360, 21, 0, 655361, 18, 0, 655362, 18, 0, 655363, 18, 0, 655364, 18, 0, 655365, 18, 0, 655366, 18, 0, 655367, 18, 0, 655368, 18, 0, 655369, 18, 0, 655370, 18, 0, 655371, 18, 0, 655372, 18, 0, 655373, 18, 0, 655374, 18, 0, 655375, 18, 0, 655376, 18, 0, 655377, 18, 0, 655378, 18, 0, 655379, 18, 0, 655380, 18, 0, 655381, 18, 0, 655382, 18, 0, 655383, 18, 0, 655384, 18, 0, 655385, 18, 0, 655386, 18, 0, 655387, 18, 0, 655388, 18, 0, 655389, 18, 0, 655390, 18, 0, 655391, 18, 0, 655392, 18, 0, 655393, 18, 0, 655394, 18, 0, 655395, 18, 0, 655396, 18, 0, 655397, 18, 0, 655398, 18, 0, 655399, 18, 0, 655400, 18, 0, 655401, 18, 0, 655402, 18, 0, 655403, 18, 0, 655404, 18, 0, 655405, 18, 0, 655406, 18, 0, 655407, 18, 0, 655408, 18, 0 )

[node name="SceneChangeMarkers" type="Node2D" parent="."]

[node name="BottomRightSceneChangePosMarker" type="Position2D" parent="SceneChangeMarkers"]
position = Vector2( 2082, 203 )
__meta__ = {
"_edit_group_": true
}

[node name="BottomRightDetectionArea2D" parent="SceneChangeMarkers/BottomRightSceneChangePosMarker" instance=ExtResource( 4 )]
scale = Vector2( 2, 2 )

[node name="TopRightSceneChangePosMarker" type="Position2D" parent="SceneChangeMarkers"]
position = Vector2( 2080, 57 )
__meta__ = {
"_edit_group_": true
}

[node name="TopRightDetectionArea2D" parent="SceneChangeMarkers/TopRightSceneChangePosMarker" instance=ExtResource( 4 )]
scale = Vector2( 2, 2 )

[node name="SpawnMarkers" type="Node2D" parent="."]

[node name="BottomRightSpawn" type="Position2D" parent="SpawnMarkers"]
position = Vector2( 2009, 199 )

[node name="TopRightSpawn" type="Position2D" parent="SpawnMarkers"]
position = Vector2( 2004, 58 )

[node name="DefaultSpawn" type="Position2D" parent="."]
position = Vector2( -254, 20 )

[node name="HarmfulBlock" parent="." instance=ExtResource( 3 )]
position = Vector2( -227, 202 )
scale = Vector2( 1, 0.5 )

[node name="HarmfulBlock2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1042, -257 )

[connection signal="body_entered" from="SceneChangeMarkers/BottomRightSceneChangePosMarker/BottomRightDetectionArea2D" to="." method="_on_BottomRightDetectionArea2D_body_entered"]
[connection signal="body_entered" from="SceneChangeMarkers/TopRightSceneChangePosMarker/TopRightDetectionArea2D" to="." method="_on_TopRightDetectionArea2D_body_entered"]
